Fix overflow bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,6 +66,10 @@ header {
   height: 100vh;
 }
 
+main{
+  overflow: hidden;
+}
+
 ul {
   list-style: none;
 }
